# wasmer

./: CHANGELOG.md  Cargo.toml  Makefile  azure-pipelines.yml
lib/api/: Cargo.toml
lib/c-api/: Cargo.toml
lib/clif-backend/: Cargo.toml
lib/clif-backend/src/: abi.rs  code.rs  lib.rs  module.rs  trampoline.rs
lib/compiler/: Cargo.toml
lib/compiler-cranelift/: Cargo.toml
lib/compiler-cranelift/src/: compiler.rs  config.rs  func_environ.rs  lib.rs
lib/compiler-llvm/: Cargo.toml
lib/compiler-llvm/src/: backend.rs  code.rs  compiler.rs  config.rs  intrinsics.rs  lib.rs  read_info.rs  state.rs
lib/compiler/src/: compiler.rs  errors.rs  function.rs  lib.rs  libcall.rs  module.rs  relocation.rs  sourceloc.rs  traps.rs  tunables.rs  unwind.rs  vm.rs
lib/emscripten/emtests/: fnmatch.wasm  lseek.c  lseek.wasm  lseek_start.txt
lib/emscripten/src/: lib.rs
lib/engine/: Cargo.toml
lib/llvm-backend/: Cargo.toml
lib/llvm-backend/cpp/: object_loader.hh
lib/llvm-backend/src/: abi.rs  backend.rs  code.rs  config.rs  intrinsics.rs  lib.rs  read_info.rs  state.rs  trampolines.rs
lib/runtime-core/: Cargo.toml
lib/runtime-core-tests/: Cargo.toml
lib/runtime-core-tests/src/: lib.rs
lib/runtime-core-tests/tests/: imports.rs
lib/runtime-core/src/: backend.rs  backing.rs  codegen.rs  config.rs  import.rs  instance.rs  lib.rs  module.rs  state.rs  typed_func.rs  types.rs  vm.rs
lib/wasm-common/: Cargo.toml
lib/wasm-common/src/: constants.rs  data_initializer.rs  features.rs  indexes.rs  lib.rs  native.rs  ref.rs  result.rs  runtime.rs  types.rs  values.rs
(+21 files in other folders)
